test/Test/Compile/Error/TypingErrors/indexOutOfBoundsUnknown.vcl
outOfBounds : forallT {n : Nat} . Tensor Nat [n] -> Nat
outOfBounds x = x ! 1